[tool.poetry]
name = "packets2db"
version = "0.1.0"
description = ""
authors = ["Igal Kolihman <igal.kolihman@gmail.com>"]
readme = "README.md"
packages = [
    { include = "packets2db/" },
    { include = "scripts/" },
]

[tool.poetry.dependencies]
python = "^3.6"
scapy = "^2.4.5"
loguru = "^0.6.0"
pymongo = "^4.3.2"
docopt = "^0.6.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
packets2db = 'scripts.cli:main'